--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Authentication Sprint Challenge",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon index.js"
+    "test": "cross-env NODE_ENV=test jest --verbose --watch",
+    "server": "cross-env NODE_ENV=dev nodemon index.js",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
